modules/mailer-service/k8s/03-mailer.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-backend-deployment
  namespace: mailer
  labels:
    app: mailer-backend
spec:
  selector:
    matchLabels:
      app: mailer-backend
  template:
    metadata:
      labels:
        app: mailer-backend
    spec:
      containers:
      - name: mailer-backend-pod
        image: oatcrunch/pickle-mailer:0.1.10
        resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
      restartPolicy: Always
