modules/mailer-service/k8s/04-mailer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailer-backend-service
  namespace: mailer
  labels:
    app: mailer-backend
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: nlb    # To create Network Load Balancer
spec:
  type: NodePort # use a LoadBalancer service for load balancing
  selector:
    app: mailer-backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
