modules/mailer-service/k8s/mailer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailer-backend-service
  namespace: mailer
spec:
  type: LoadBalancer # use a LoadBalancer service for load balancing
  selector:
    app: mailer-backend
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
