modules/mailer-service/k8s/mailer.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailer-backend-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-pass-rewrite: /$1?$2
  labels:
    app: mailer-backend
spec:
  rules:
  - host: pickle-mailer.com
    http:
      paths:
      - backend:
          service:
            name: mailer-backend-service
            port:
              number: 8081
        path: /api/?(.*)
        pathType: Prefix
